échange api avec la bar de recherche et le site film

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,76 +1,3 @@
-<mat-grid-list cols="6" rowHeight="250px" style="width: 70%; margin-left: auto; margin-right: auto; margin-top: 20px;">
-  <mat-grid-tile>
-      <img class="img-size" src="https://fr.web.img6.acsta.net/medias/04/34/49/043449_af.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img3.acsta.net/medias/nmedia/18/77/96/35/19701393.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size"
-         src="https://img-4.linternaute.com/hjM5dgLFPajbUWUmTVDwLHOqt3c=/1240x/19547719906f480d80a7c0a77d93f6be/ccmcms-linternaute/127232.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img6.acsta.net/pictures/14/09/24/12/08/158828.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img5.acsta.net/medias/nmedia/18/35/53/30/18435143.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size"
-         src="https://img.over-blog-kiwi.com/0/55/25/40/20150815/ob_1ffef2_fantastic-4-affiche-finale-us.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img6.acsta.net/medias/nmedia/18/83/19/35/20158079.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img2.acsta.net/medias/nmedia/18/65/69/21/18949753.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img3.acsta.net/pictures/210/081/21008110_20130524125237634.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img2.acsta.net/pictures/18/07/02/17/25/3643090.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img4.acsta.net/medias/nmedia/00/02/53/35/affiche0.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img6.acsta.net/medias/nmedia/18/35/23/41/18378380.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img3.acsta.net/medias/nmedia/18/35/52/34/18450888.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img6.acsta.net/medias/nmedia/18/36/32/70/18778375.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img2.acsta.net/medias/nmedia/18/65/64/35/19116952.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img5.acsta.net/medias/nmedia/18/69/69/81/19590744.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img3.acsta.net/medias/nmedia/18/78/64/49/19762436.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img3.acsta.net/medias/nmedia/18/85/31/58/20042068.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img4.acsta.net/pictures/15/02/24/18/29/161927.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img5.acsta.net/pictures/18/03/16/14/42/0611719.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img2.acsta.net/pictures/19/04/04/09/04/0472053.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img4.acsta.net/pictures/16/07/07/16/06/227162.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://media.senscritique.com/media/000019210353/source_big/Naruto_La_Legende_de_la_pierre_de_Guelel.jpg">
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <img class="img-size" src="https://fr.web.img2.acsta.net/pictures/17/03/22/12/30/202078.jpg">
-  </mat-grid-tile>
-</mat-grid-list>
+<app-search [placeholder]="'Search a movie'"
+            (movieSelected)="onMovieSelected($event)">
+</app-search>
