--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span class="position-text">Welcome to "Watch Film"</span>
+  <span class="position-text">Welcome to "Watch Movies"</span>
 </mat-toolbar>
 
 <mat-tab-group animationDuration="0ms" mat-align-tabs="center">
@@ -10,7 +10,9 @@
     </ng-template>
     <app-home></app-home>
   </mat-tab>
-  <mat-tab label="ACTION"> Content 2</mat-tab>
+  <mat-tab label="ACTION">
+    <app-action></app-action>
+  </mat-tab>
   <mat-tab label="DRAME"> Content 3</mat-tab>
   <mat-tab label="COMEDIE"> Content 2</mat-tab>
   <mat-tab label="ANIMATION"> Content 3</mat-tab>
