--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,8 +1,6 @@
 <div class="row">
-  <div style="display: flex; flex-flow: row wrap;">
-    <input type="text" [placeholder]="placeholder" aria-label="Search" [(ngModel)]="searchMovie">
-    <button type="button" mat-mini-fab color="primary" (click)="selectedMovie()">
-      Search
-    </button>
+  <div style="display: flex; flex-flow: row wrap; justify-content: center; margin-top: 20px;">
+      <input type="text" [placeholder]="placeholder" aria-label="Search" [(ngModel)]="searchMovie" style="width: 40%">
+      <button mat-raised-button color="primary" (click)="selectedMovie()">Search</button>
   </div>
 </div>
