--- a/src/app/movie/description/description.component.html
+++ b/src/app/movie/description/description.component.html
@@ -1,5 +1,5 @@
 <div class="row" style="max-height: 550px; height: 550px">
-  <div style="display: flex; flex-flow: row wrap;">
+  <div style="display: flex; flex-direction: row;">
     <div>
       <img [src]="movie.Poster" style="height: 400px; max-height: 400px; margin-left: 50px; margin-top: 50px">
     </div>
